# Project2

./: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Compile.h  Makefile.macos  Project2.vcxproj  Project2.vcxproj.filters  README_SERVER.md  addelem.h  arr.h  audio.h  build_server.sh  change.txt  co.cod  co.cpp  cobj2c.h  command_queue.h  db2.h  db_0_0-journal  db_0_0.db  db_0_0.db-shm  db_0_0.db-wal  elem.h  extorch.h  extract_cs.ps1  extract_cs3.ps1  file_engine.h  file_io_async.h  gc.h  http_client.h  http_client_curl.h  http_server.h  imas.h  lldb.h  llvm.h  main.cpp  main.exp  main.lib  main2.cpp  main3.mm  (+42 more)
.claude/: settings.local.json
HopStar.xcodeproj/: project.pbxproj
HopStar.xcodeproj/xcshareddata/xcschemes/: HopStar-iOS.xcscheme  HopStar-macOS.xcscheme
Project2/x64/Debug/: Project2.exe.recipe
build-ios/: info.plist
build-ios/ModuleCache.noindex/: Session.modulevalidation
build-ios/ModuleCache.noindex/19PQ3D6DH50TS/: ARKit-1AWQDZMV51CM3.pcm  AVFAudio-19GAUYJDRG7QX.pcm  AVFoundation-2S2UFNEPDJNRF.pcm  AudioToolbox-1SLPYNFUXV6K3.pcm  AvailabilityMacros-2EIXOXKCWOK0G.pcm  CFNetwork-3MVTA3VYEJCA3.pcm  CoreAudio-2VWF0IL2PFGLW.pcm  CoreAudioTypes-1P2QDZL60WU0Q.pcm  CoreFoundation-3PRXEYCYTZ0ZF.pcm  CoreGraphics-19GMCQK1P6XM3.pcm  CoreImage-3UI8NCSPFINZ0.pcm  CoreLocation-8785D1FK7QC3.pcm  CoreMIDI-24J7B0494YQ6A.pcm  CoreML-29GEH26J06GG.pcm  CoreMedia-VOXCY1L600T9.pcm  CoreText-2C7KN0R8TNZFM.pcm  CoreVideo-1DGLWUSJV0EV.pcm  Darwin-3OSIGR9MJU32L.pcm  DarwinFoundation-2IMM3VLDJEL37.pcm  Dispatch-D5NPGC7AJE6P.pcm  FileProvider-2O2DCCNZ1P9DX.pcm  Foundation-2D6I54GZO0EPV.pcm  GLKit-16F4GZGWO8WFD.pcm  IOSurface-2GMZHIFU9GAVA.pcm  ImageIO-2XWEP1ZDFHQCN.pcm  MediaToolbox-1T6LWEPVJZN8Z.pcm  Metal-2AOW5MNXUO3VM.pcm  ModelIO-QZFHO4O7BSF2.pcm  ObjectiveC-2PWORDSQEHK5X.pcm  OpenGLES-3VQGO085QDZ2H.pcm  PDFKit-3OVMTKJQS3BP.pcm  QuartzCore-1PGA94LEHPAST.pcm  QuickLook-4MLT85YEZPSF.pcm  QuickLookThumbnailing-377IN949ZW98W.pcm  SceneKit-3P6ZIR65I07ZD.pcm  Security-4T9WYUES29A1.pcm  SpriteKit-A8Z8XGC7SP4H.pcm  Symbols-1DNV4QDBC5QS9.pcm  TargetConditionals-2CCMMKK309BGL.pcm  UIKit-1WUOUYQ3HJCSW.pcm  (+61 more)
build-ios/ModuleCache.noindex/1CFRHE1Y76EZI/: ARKit-1AWQDZMV51CM3.pcm  AVFAudio-19GAUYJDRG7QX.pcm  AVFoundation-2S2UFNEPDJNRF.pcm  AudioToolbox-1SLPYNFUXV6K3.pcm  AvailabilityMacros-2EIXOXKCWOK0G.pcm  CFNetwork-3MVTA3VYEJCA3.pcm  CoreAudio-2VWF0IL2PFGLW.pcm  CoreAudioTypes-1P2QDZL60WU0Q.pcm  CoreFoundation-3PRXEYCYTZ0ZF.pcm  CoreGraphics-19GMCQK1P6XM3.pcm  CoreImage-3UI8NCSPFINZ0.pcm  CoreLocation-8785D1FK7QC3.pcm  CoreMIDI-24J7B0494YQ6A.pcm  CoreML-29GEH26J06GG.pcm  CoreMedia-VOXCY1L600T9.pcm  CoreText-2C7KN0R8TNZFM.pcm  CoreVideo-1DGLWUSJV0EV.pcm  Darwin-3OSIGR9MJU32L.pcm  DarwinFoundation-2IMM3VLDJEL37.pcm  Dispatch-D5NPGC7AJE6P.pcm  FileProvider-2O2DCCNZ1P9DX.pcm  Foundation-2D6I54GZO0EPV.pcm  GLKit-16F4GZGWO8WFD.pcm  IOSurface-2GMZHIFU9GAVA.pcm  ImageIO-2XWEP1ZDFHQCN.pcm  MediaToolbox-1T6LWEPVJZN8Z.pcm  Metal-2AOW5MNXUO3VM.pcm  ModelIO-QZFHO4O7BSF2.pcm  ObjectiveC-2PWORDSQEHK5X.pcm  OpenGLES-3VQGO085QDZ2H.pcm  PDFKit-3OVMTKJQS3BP.pcm  QuartzCore-1PGA94LEHPAST.pcm  QuickLook-4MLT85YEZPSF.pcm  QuickLookThumbnailing-377IN949ZW98W.pcm  SceneKit-3P6ZIR65I07ZD.pcm  Security-4T9WYUES29A1.pcm  SpriteKit-A8Z8XGC7SP4H.pcm  Symbols-1DNV4QDBC5QS9.pcm  TargetConditionals-2CCMMKK309BGL.pcm  UIKit-1WUOUYQ3HJCSW.pcm  (+61 more)
build-ios/ModuleCache.noindex/2SO1KFS7NP7CS/: ARKit-1AWQDZMV51CM3.pcm  AVFAudio-19GAUYJDRG7QX.pcm  AVFoundation-2S2UFNEPDJNRF.pcm  AudioToolbox-1SLPYNFUXV6K3.pcm  AvailabilityMacros-2EIXOXKCWOK0G.pcm  CFNetwork-3MVTA3VYEJCA3.pcm  CoreAudio-2VWF0IL2PFGLW.pcm  CoreAudioTypes-1P2QDZL60WU0Q.pcm  CoreFoundation-3PRXEYCYTZ0ZF.pcm  CoreGraphics-19GMCQK1P6XM3.pcm  CoreImage-3UI8NCSPFINZ0.pcm  CoreLocation-8785D1FK7QC3.pcm  CoreMIDI-24J7B0494YQ6A.pcm  CoreML-29GEH26J06GG.pcm  CoreMedia-VOXCY1L600T9.pcm  CoreText-2C7KN0R8TNZFM.pcm  CoreVideo-1DGLWUSJV0EV.pcm  Darwin-3OSIGR9MJU32L.pcm  DarwinFoundation-2IMM3VLDJEL37.pcm  Dispatch-D5NPGC7AJE6P.pcm  FileProvider-2O2DCCNZ1P9DX.pcm  Foundation-2D6I54GZO0EPV.pcm  GLKit-16F4GZGWO8WFD.pcm  IOSurface-2GMZHIFU9GAVA.pcm  ImageIO-2XWEP1ZDFHQCN.pcm  MediaToolbox-1T6LWEPVJZN8Z.pcm  Metal-2AOW5MNXUO3VM.pcm  ModelIO-QZFHO4O7BSF2.pcm  ObjectiveC-2PWORDSQEHK5X.pcm  OpenGLES-3VQGO085QDZ2H.pcm  PDFKit-3OVMTKJQS3BP.pcm  QuartzCore-1PGA94LEHPAST.pcm  QuickLook-4MLT85YEZPSF.pcm  QuickLookThumbnailing-377IN949ZW98W.pcm  SceneKit-3P6ZIR65I07ZD.pcm  Security-4T9WYUES29A1.pcm  SpriteKit-A8Z8XGC7SP4H.pcm  Symbols-1DNV4QDBC5QS9.pcm  TargetConditionals-2CCMMKK309BGL.pcm  UIKit-1WUOUYQ3HJCSW.pcm  (+61 more)
build-ios/ModuleCache.noindex/2WXJ6H20QC5B1/: AvailabilityMacros-2EIXOXKCWOK0G.pcm  CFNetwork-3MVTA3VYEJCA3.pcm  CoreFoundation-3PRXEYCYTZ0ZF.pcm  Darwin-3OSIGR9MJU32L.pcm  DarwinFoundation-2IMM3VLDJEL37.pcm  Dispatch-D5NPGC7AJE6P.pcm  ObjectiveC-2PWORDSQEHK5X.pcm  Security-4T9WYUES29A1.pcm  SwiftShims-ETMZL06LU75E.pcm  TargetConditionals-2CCMMKK309BGL.pcm  XPC-1VUX2ZXXZNY4I.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _Builtin_tgmath-19KE09ZDXQ6Q3.pcm  _SwiftConcurrencyShims-ETMZL06LU75E.pcm  __wctype-2Y0OU8A4C9NRD.pcm  _assert-2Y0OU8A4C9NRD.pcm  _complex-2Y0OU8A4C9NRD.pcm  _ctype-2Y0OU8A4C9NRD.pcm  _errno-2Y0OU8A4C9NRD.pcm  (+40 more)
build-ios/SDKStatCaches.noindex/: iphonesimulator18.5-22F76-d5fc8ad4295d2ef488fb7d0f804ce0c4.sdkstatcache
cs/: CObj2C.cs  Obj1C.cs  Obj2C.cs  lldb.cs
linux/: CMakeLists.txt
platform/apple/: AppDelegate.mm  AppleBridge-ObjC.m  AppleBridge-Swift.h  AppleBridge.h  AppleBridge.mm  Dummy.swift  Info-iOS.plist  Info-macOS.plist  LaunchScreen.storyboard  SwiftFeatures.swift  portaudio_ios.mm  ugui_ios.h  ugui_ios_minimal.h
shaders/: fs_unite2.sc  v_unite2.def.sc  vs_unite2.sc
x64/Debug/: Project2.exe.recipe  Project2.exp  Project2.lib  Project2.vcxproj.FileListAbsolute.txt
(+674 files in other folders)
